conclusions and references

--- a/LSFA/LSFA.bib
+++ b/LSFA/LSFA.bib
@@ -1,5 +1,5 @@
 @article{abrusci:noncommutative:1990,
-  author    = {V. Michele Abrusci},
+  author    = {Vito Michele Abrusci},
   title     = {Non-commutative Intuitionistic Linear Logic},
   XXXjournal   = {Math. Log. Quart.},
   journal = "Mathematical Logic Quarterly",
@@ -7,7 +7,7 @@
   number    = {4},
   pages     = {297--318},
   year      = {1990},
-  note       = {{D}OI: \url{10.1002/malq.19900360405}}
+  doi       = {10.1002/malq.19900360405}
 }
 
 @article{altenkirch:monads:2014,
@@ -21,17 +21,17 @@
   number    = {1},
   eid   = {3},
   year      = {2015},
-  note       = {{D}OI: \url{10.2168/lmcs-11(1:3)2015}}
+  doi       = {10.2168/lmcs-11(1:3)2015}
 }
 
 @article{andreoli:logic:1992,
 	title = {Logic Programming with Focusing Proofs in Linear Logic},
 	volume = {2},
-	note = {{D}OI: \url{10.1093/logcom/2.3.297}},
+	doi = {10.1093/logcom/2.3.297},
 	pages = {297--347},
 	number = {3},
 	XXXjournal = {J. Log.  Comput.},
-	journal = "Journal of Logic and Computation",
+	journal = "Journal of Logic and Computation",}}
 	author = {Jean-Marc Andreoli},
 	year = {1992}
 }
@@ -40,7 +40,7 @@
 @article{bourke:skew:2017,
 	title = {Skew structures in 2-category theory and homotopy theory},
 	volume = {12},
-	note = {{D}OI: \url{10.1007/s40062-015-0121-z}},
+	doi = {10.1007/s40062-015-0121-z},
 	pages = {31--81},
 	number = {1},
 	XXXjournal = {J. Homotopy Relat. Struct.},
@@ -52,7 +52,7 @@
 @article{bourke:skew:2018,
 	title = {Skew Monoidal Categories and Skew Multicategories},
 	volume = {506},
-	note = {{D}OI: \url{10.1016/j.jalgebra.2018.02.039}},
+	doi = {10.1016/j.jalgebra.2018.02.039},
 	pages = {237--266},
 	XXXjournal = {J. Alg.},
 	journal = "Journal of Algebra",
@@ -75,7 +75,7 @@
 @article{buckley:catalan:2015,
 	title = {The {C}atalan Simplicial Set},
 	volume = {158},
-	note = {{D}OI: \url{10.1017/s0305004114000498}},
+	doi = {10.1017/s0305004114000498},
 	pages = {211--222},
 	number = {2},
 	XXXjournal = {Math. Proc. Cambridge Philos. Soc.},
@@ -105,7 +105,7 @@
 
 @inproceedings{eilenberg:closed:1966,
 	title = {Closed Categories},
-	note = {{D}OI: \url{10.1007/978-3-642-99902-4\_22}},
+	doi = {10.1007/978-3-642-99902-4\_22},
 	pages = {421--562},
 	booktitle = {Proceedings of Conference on Categorical Algebra (La Jolla, 1965)},
 	publisher = {Springer},
@@ -123,7 +123,7 @@
   number    = {3},
   pages     = {255--296},
   year      = {1991},
-  note       = {{D}OI: \url{10.1017/s0960129500001328}}
+  doi       = {10.1017/s0960129500001328}
 }
 
 @inproceedings{hasegawa:linear:2017,
@@ -137,7 +137,7 @@
   volume    = {238},
   pages     = {54--63},
   year      = {2016},
-  note       = {{D}OI: \url{10.4204/etpcs.238.6}},
+  doi       = {10.4204/etpcs.238.6},
   publisher = "Open Publishing Assoc."
 }
 
@@ -157,7 +157,7 @@
   volume    = {292},
   pages     = {43--89},
   year      = {2018},
-  note       = {{D}OI: \url{10.4204/eptcs.292.4}},
+  doi       = {10.4204/eptcs.292.4},
   publisher = "Open Publishing Assoc."
 }
 
@@ -175,7 +175,7 @@
 @article{lack:triangulations:2014,
 	title = {Triangulations, Orientals, and Skew Monoidal Categories},
 	volume = {258},
-	note = {{D}OI: \url{10.1016/j.aim.2014.03.003}},
+	doi = {10.1016/j.aim.2014.03.003},
 	pages = {351--396},
 	XXXjournal = {Adv.\ Math.},
 	journal = "Advances in Mathematics",
@@ -242,13 +242,13 @@
   pages     = {243--255},
   publisher = {{ACM}},
   year      = {2015},
-  note       = {{D}OI: \url{10.1145/2784731.2784757}}
+  doi       = {10.1145/2784731.2784757}
 }
 
 @article{street:skew-closed:2013,
 	title = {Skew-Closed Categories},
 	volume = {217},
-	note = {{D}OI: \url{10.1016/j.jpaa.2012.09.020}},
+	doi = {10.1016/j.jpaa.2012.09.020},
 	pages = {973--988},
 	number = {6},
 	XXXjournal = {J. Pure Appl. Alg.},
@@ -262,7 +262,7 @@
 	volume = {231},
         XXXjournal = {Adv.\ Math.},
 	journal = "Advances in Mathematics",
-	note = {{D}OI: \url{10.1016/j.aim.2012.06.027}},
+	doi = {10.1016/j.aim.2012.06.027},
 	pages = {1694--1730},
 	number = {3--4},
 	author = {Korn{\'e}l Szlach\'anyi},
@@ -299,14 +299,14 @@
   volume    = {332},
   pages     = {35--53},
   year      = {2021},
-  note       = {{D}OI: \url{10.4204/eptcs.332.3}},
+  doi       = {10.4204/eptcs.332.3},
   publisher = "Open Publishing Association"
 }
 
 @article{uustalu:eilenberg-kelly:2020,
 	title = {{E}ilenberg-{K}elly Reloaded},
 	volume = {352},
-	note = {{D}OI: \url{10.1016/j.entcs.2020.09.012}},
+	doi = {10.1016/j.entcs.2020.09.012},
 	pages = {233--256},
 	XXXjournal = {Electron. Notes Theor. Comput. Sci.},
 	journal = "Electronic Notes in Theoretical Computer Science",
@@ -328,7 +328,7 @@
   volume    = {333},
   pages     = {230--246},
   year      = {2021},
-  note       = {{D}OI: \url{10.4204/eptcs.333.16}},
+  doi       = {10.4204/eptcs.333.16},
   publisher = "Open Publishing Association"
   }
 
@@ -341,14 +341,14 @@
   volume={20},
   pages={377--406},
   year={2021},
-  note = {{D}OI: \url{10.1007/978-3-030-66545-6_11}},
+  doi = {10.1007/978-3-030-66545-6_11},
   publisher={Springer}
 }
 
 
 @inproceedings{veltri:coherence:2021,
 	title = {Coherence via Focusing for Symmetric Skew Monoidal Categories},
-	note = {{D}OI: \url{10.1007/978-3-030-88853-4_12}},
+	doi = {10.1007/978-3-030-88853-4_12},
 	XXXseries = {Lect. Notes in Comput. Sci.},
 	series = "Lecture Notes in Computer Science",
 	pages = {184--200},
@@ -384,13 +384,13 @@
   pages = "173--185",
   publisher = "Springer",
   year = 2006,
-  note = {{D}OI: \url{10.1007/11780342_19}}
+  doi = {10.1007/11780342_19}}
 }
 
 
 @inproceedings{UVW:protsn,
 	title = {Proof Theory of Skew Non-Commutative MILL},
-	note = {{D}OI: \url{10.4204/eptcs.358.9}},
+	doi = {10.4204/eptcs.358.9},
 	pages = {118--135},
   booktitle = {Proceedings of 10th International Conference on Non-classical Logics: Theory and Applications, {NCL} 2022},
   XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
@@ -417,7 +417,7 @@
 @article{girard:linear:87,
   author       = {Jean{-}Yves Girard},
   title        = {Linear Logic},
-  journal      = {Theor. Comput. Sci.},
+  journal      = {Theoretical Computer Science},
   volume       = {50},
   pages        = {1--102},
   year         = {1987},
