small fix bibliography

--- a/LSFA/LSFA.bib
+++ b/LSFA/LSFA.bib
@@ -31,7 +31,7 @@
 	pages = {297--347},
 	number = {3},
 	XXXjournal = {J. Log.  Comput.},
-	journal = "Journal of Logic and Computation",}}
+	journal = "Journal of Logic and Computation",
 	author = {Jean-Marc Andreoli},
 	year = {1992}
 }
