--- a/LSFA/LSFA23-revised.tex
+++ b/LSFA/LSFA23-revised.tex
@@ -123,7 +123,7 @@ This work concerns the proof theory of (left) skew monoidal categories and their
 Skew monoidal categories are a weak version of Mac Lane's monoidal categories, where the structural laws are not required to be invertible, they are merely natural transformations with a specific orientation. 
 Sequent calculi which can be modelled in such categories can be identified as deductive systems for restricted substructural fragments of intuitionistic linear logic. These calculi enjoy cut elimination and admit a focusing strategy, sharing resemblance with Andreoli's normalization technique for linear logic. The focusing procedure is useful for solving the coherence problem of the considered categories with skew structure.
 
-Here we investigate possible extensions of the sequent calculi of Uustalu et al. with additive connectives. 
+Here we investigate possible extensions of the sequent calculi of Uustalu et al.~with additive connectives. 
 As a first step, we extend the sequent calculus with additive conjunction and disjunction, corresponding to studying the proof theory of skew monoidal categories with binary products and coproducts satisfying a left-distributivity condition. 
 We introduce a new focused sequent calculus of derivations in normal form, which employs tag annotations to reduce non-deterministic choices in bottom-up proof search.
 The focused sequent calculus and the proof of its correctness has been formalized in the Agda proof assistant.
@@ -132,22 +132,22 @@ We also discuss extensions of the logic with additive units, a form of skew exch
 
 \section{Introduction}
 
-Substructural logics are logical systems in which the usage of one or more structural rules is disallowed or restricted. A well-known example is given by the syntactic calculus of Lambek \cite{lambek:mathematics:58}, in which all the structural rules of exchange, weakening and contraction are disallowed. Variants of the Lambek calculus allow exchange or a cyclic form of exchange, while others disallow even associativity \cite{moot:logic:12}. In Girard's linear logic, which has been studied both in the presence and absence of an exchange rule \cite{girard:linear:87,abrusci:noncommutative:1990}, selective versions of weakening and contraction can be recovered via the use of modalities. Applications of substructural logics are abundant in a variety of different fields, from computational investigations of natural languages to the design and development of resource-sensitive programming languages.
+Substructural logics are logical systems in which the usage of one or more structural rules is disallowed or restricted. A well-known example is the syntactic calculus of Lambek \cite{lambek:mathematics:58}, in which all the structural rules of exchange, weakening and contraction are disallowed. Variants of the Lambek calculus allow exchange or a cyclic form of exchange, while others disallow even associativity \cite{moot:logic:12}. In Girard's linear logic, which has been studied both in the presence and absence of an exchange rule \cite{girard:linear:87,abrusci:noncommutative:1990}, selective versions of weakening and contraction can be recovered via the use of modalities. Applications of substructural logics are abundant in a variety of different fields, from computational investigations of natural languages to the design of resource-sensitive programming languages.
 
-In recent years, in collaboration with Tarmo Uustalu and Noam Zeilberger, we initiated a program intended to study a family of \emph{semi-substructural} logics, inspired by developments in category theory by Szlach{\'a}nyi, Street, Bourke, Lack and many others \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,street:skew-closed:2013,lack:triangulations:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,bourke:lack:braided:2020}. Korn{\'e}l Szlach\'anyi introduced \emph{skew monoidal categories} as a weakening of MacLane's monoidal categories in which the structural morphisms of associativity and unitality (often also called associator and unitors) are not required to be invertible, they are merely natural transformation in a particular direction. As such, they can be considered \emph{semi-associative} and \emph{semi-unital} variants of monoidal categories. Bourke and Lack also introduced notions of braiding and symmetry for skew monoidal categories which involve three objects instead of two \cite{bourke:lack:braided:2020}. Skew monoidal categories arise naturally in semantics of programming languages \cite{altenkirch:monads:2014}, and semi-associativity has strong connections with combinatorial structures such as the Tamari lattice and Stasheff associahedra \cite{zeilberger:semiassociative:19,moortgat:tamari:20}
+In recent years, in collaboration with Tarmo Uustalu and Noam Zeilberger, we initiated a program intended to study a family of \emph{semi-substructural} logics, inspired by developments in category theory by Szlach{\'a}nyi, Street, Bourke, Lack and many others \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,street:skew-closed:2013,lack:triangulations:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,bourke:lack:braided:2020}. Korn{\'e}l Szlach\'anyi introduced \emph{skew monoidal categories} as a weakening of MacLane's monoidal categories in which the structural morphisms of associativity and unitality (often also called associator and unitors) are not required to be invertible, they are just natural transformation in a particular direction. As such, they can be regarded as \emph{semi-associative} and \emph{semi-unital} variants of monoidal categories. Bourke and Lack also introduced notions of braiding and symmetry for skew monoidal categories which involve three objects instead of two \cite{bourke:lack:braided:2020}. Skew monoidal categories arise naturally in semantics of programming languages \cite{altenkirch:monads:2014}, and semi-associativity has strong connections with combinatorial structures such as the Tamari lattice and Stasheff associahedra \cite{zeilberger:semiassociative:19,moortgat:tamari:20}
 
-Semi-substructural logics correspond to the internal languages of skew monoidal categories and their extensions, which sit in-between (certain fragments of) non-associative and associative intuitionistic linear logic. Semi-associativity and semi-unitality can be hard-coded in the sequent calculus following a two-step recipe. First, consider sequents of the form $S \mid \Gamma \vdash A$, where the antecedent is split into an optional formula $S$, which called stoup, and an ordered list of formulae $\Gamma$. The succedent consists of a single formula $A$. Then restrict the application of introduction rules to allow only one of the directions of associativity and unitality, the one provided in the definition of skew monoidal category. For example, left-introduction rules are allowed to act only on the formula in stoup position, not on formulae in $\Gamma$.
+Semi-substructural logics correspond to the internal languages of skew monoidal categories and their extensions, therefore sitting in between (certain fragments of) non-associative and associative intuitionistic linear logic. Semi-associativity and semi-unitality can be hard-coded in the sequent calculus following a two-step recipe. First, consider sequents of the form $S \mid \Gamma \vdash A$, where the antecedent is split into an optional formula $S$, called stoup, and an ordered list of formulae $\Gamma$. The succedent consists of a single formula $A$. Then restrict the application of introduction rules to allow only one of the directions of associativity and unitality, the one in the definition of skew monoidal category. For example, left-introduction rules are allowed to act only on the formula in stoup position, not on formulae in $\Gamma$.
 
 In our previous investigations we have explored deductive systems for $(i)$ skew semigroup \cite{zeilberger:semiassociative:19}, $(ii)$ skew monoidal \cite{uustalu:sequent:2021}, $(iii)$ skew (prounital) closed \cite{uustalu:deductive:nodate} and $(iv)$ skew monoidal closed categories \cite{UVW:protsn}, corresponding to skew variants of the fragments of non-commutative intuitionistic linear logic consisting of connectives $(i)$ $\otimes$, $(ii)$ $(\I,\otimes)$, $(iii)$ $\lolli$ and $(iv)$ $(\I,\otimes,\lolli)$. We have also studied partial normality conditions, when one or more among associator and unitors is allowed to have an inverse \cite{uustalu:proof:nodate}, and extensions with exchange {\`a} la Bourke and Lack \cite{veltri:coherence:2021}.
 
-When studying meta-theoretic properties of these semi-structural deductive systems, we have been mostly interested in categorical and proof-theoretic semantics. In the latter, we have particularly investigated normalization strategies inspired by Andreoli's focused sequent calculus for classical linear logic \cite{andreoli:logic:1992} and employed the resulting normal forms to solve the \emph{coherence problem} for the corresponding categories with skew structure. For the latter categories, the word problem is more nuanced than in the normal non-skew case studied by MacLane \cite{maclane1963natural}. Our study additionally revealed that the focused sequent calculi of semi-substructural logics can serve as cornerstones for a compositional and modular understanding of normalization techniques for other richer substructural logics.
+When studying meta-theoretic properties of these semi-structural deductive systems, we have been mostly interested in categorical and proof-theoretic semantics. In the latter, we have particularly investigated normalization strategies inspired by Andreoli's focused sequent calculus for classical linear logic \cite{andreoli:logic:1992} and employed the resulting normal forms to solve the \emph{coherence problem} for the corresponding categories with skew structure. For these categories, the word problem is more nuanced than in the normal non-skew case studied by MacLane \cite{maclane1963natural}. Our study additionally revealed that the focused sequent calculi of semi-substructural logics can serve as cornerstones for a compositional and modular understanding of normalization techniques for other richer substructural logics.
 
 In this work we begin the investigation of  semi-substructural logics with \emph{additive connectives}. We start in Section \ref{sec:sequent-calculus} by considering a fragment of non-commutative linear logic consisting of skew multiplicative unit $\I$ and conjunction $\ot$, and additive conjunction $\land$ and disjunction $\lor$. We describe a cut-free sequent calculus and a congruence relation $\circeq$ identifying derivations up-to $\eta$-equivalence and permutative conversions. In Section \ref{sec:categorical}, we discuss categorical semantics in terms of skew monoidal categories with binary products and coproducts satisfying a left-distributivity condition.
 
-In Section \ref{sec:focusing}, we introduce a sequent calculus of proofs in normal form, i.e. canonical representative of the equivalence relation on derivations $\circeq$. The design of the latter calculus is again inspired by the ideas of Andreoli and it describes a sound and complete root-first proof search strategy for the original sequent calculus. Completeness is achieved by marking sequents with lists of \emph{tags}, a mechanism introduced by Uustalu et al. \cite{UVW:protsn} and inspired by Scherer and R{\'e}my's saturation technique \cite{scherer:simple:2015}, which helps to completely eliminate all unnecessary non-determinism in proof search and faithfully capture normal forms wrt. the congruence relation on derivations in the original sequent calculus. %In a sense, this is similar to what proof nets are used for.
+In Section \ref{sec:focusing}, we introduce a sequent calculus of proofs in normal form, i.e. canonical representative of the equivalence relation on derivations $\circeq$. The design of the latter calculus is again inspired by the ideas of Andreoli and it describes a sound and complete root-first proof search strategy for the original sequent calculus. Completeness is achieved by marking sequents with lists of \emph{tags}, a mechanism introduced by Uustalu et al. \cite{UVW:protsn} and inspired by Scherer and R{\'e}my's saturation technique \cite{scherer:simple:2015}, which helps to completely eliminate all undesired non-determinism in proof search and faithfully capture normal forms wrt. the congruence relation on derivations in the original sequent calculus. %In a sense, this is similar to what proof nets are used for.
 
 To showcase the modularity of our normalization strategy, in Section \ref{sec:extensions} we discuss extensions of the logic with other connectives, such as additive units, the structural rule of exchange in the style of Bourke and Lack, and linear implication.
-This indicates that our normalization techniques is potentially scalable to  other richer substructural logics arising as extensions of ours, e.g. full Lambek calculus or intuitionistic linear logic.
+This provides evidence that our normalization technique is potentially scalable to  other richer substructural logics arising as extensions of ours, e.g. full Lambek calculus or intuitionistic linear logic.
 
 The sequent calculi of Sections \ref{sec:sequent-calculus} and \ref{sec:focusing}, as well as the effective normalization procedure, have been fully formalized in the Agda proof assistant. The code is freely available at
 \begin{center}
