final reading for pre-proceeding: sec 2 and 3

--- a/LSFA/LSFA23-revised.tex
+++ b/LSFA/LSFA23-revised.tex
@@ -127,14 +127,14 @@ Here we investigate possible extensions of the sequent calculi of Uustalu et al.
 As a first step, we extend the sequent calculus with additive conjunction and disjunction, corresponding to studying the proof theory of skew monoidal categories with binary products and coproducts satisfying a left-distributivity condition. 
 We introduce a new focused sequent calculus of derivations in normal form, which employs tag annotations to reduce non-deterministic choices in bottom-up proof search.
 The focused sequent calculus and the proof of its correctness has been formalized in the Agda proof assistant.
-We also discuss extensions of the logic with additive units, a form of skew exchange, and linear implication.
+We also discuss extensions of the logic with additive units, a form of skew exchange and linear implication.
 \end{abstract}
 
 \section{Introduction}
 
 Substructural logics are logical systems in which the usage of one or more structural rules is disallowed or restricted. A well-known example is the syntactic calculus of Lambek \cite{lambek:mathematics:58}, in which all the structural rules of exchange, weakening and contraction are disallowed. Variants of the Lambek calculus allow exchange or a cyclic form of exchange, while others disallow even associativity \cite{moot:logic:12}. In Girard's linear logic, which has been studied both in the presence and absence of an exchange rule \cite{girard:linear:87,abrusci:noncommutative:1990}, selective versions of weakening and contraction can be recovered via the use of modalities. Applications of substructural logics are abundant in a variety of different fields, from computational investigations of natural languages to the design of resource-sensitive programming languages.
 
-In recent years, in collaboration with Tarmo Uustalu and Noam Zeilberger, we initiated a program intended to study a family of \emph{semi-substructural} logics, inspired by developments in category theory by Szlach{\'a}nyi, Street, Bourke, Lack and many others \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,street:skew-closed:2013,lack:triangulations:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,bourke:lack:braided:2020}. Korn{\'e}l Szlach\'anyi introduced \emph{skew monoidal categories} as a weakening of MacLane's monoidal categories in which the structural morphisms of associativity and unitality (often also called associator and unitors) are not required to be invertible, they are just natural transformation in a particular direction. As such, they can be regarded as \emph{semi-associative} and \emph{semi-unital} variants of monoidal categories. Bourke and Lack also introduced notions of braiding and symmetry for skew monoidal categories which involve three objects instead of two \cite{bourke:lack:braided:2020}. Skew monoidal categories arise naturally in semantics of programming languages \cite{altenkirch:monads:2014}, and semi-associativity has strong connections with combinatorial structures such as the Tamari lattice and Stasheff associahedra \cite{zeilberger:semiassociative:19,moortgat:tamari:20}
+In recent years, in collaboration with Tarmo Uustalu and Noam Zeilberger, we initiated a program intended to study a family of \emph{semi-substructural} logics, inspired by developments in category theory by Szlach{\'a}nyi, Street, Bourke, Lack and many others \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,street:skew-closed:2013,lack:triangulations:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,bourke:lack:braided:2020}. Korn{\'e}l Szlach\'anyi introduced \emph{skew monoidal categories} as a weakening of MacLane's monoidal categories in which the structural morphisms of associativity and unitality (often also called associator and unitors) are not required to be invertible, they are just natural transformation in a particular direction. As such, they can be regarded as \emph{semi-associative} and \emph{semi-unital} variants of monoidal categories. Bourke and Lack also introduced notions of braiding and symmetry for skew monoidal categories which involve three objects instead of two \cite{bourke:lack:braided:2020}. Skew monoidal categories arise naturally in semantics of programming languages \cite{altenkirch:monads:2014} and semi-associativity has strong connections with combinatorial structures such as the Tamari lattice and Stasheff associahedra \cite{zeilberger:semiassociative:19,moortgat:tamari:20}
 
 Semi-substructural logics correspond to the internal languages of skew monoidal categories and their extensions, therefore sitting in between (certain fragments of) non-associative and associative intuitionistic linear logic. Semi-associativity and semi-unitality can be hard-coded in the sequent calculus following a two-step recipe. First, consider sequents of the form $S \mid \Gamma \vdash A$, where the antecedent is split into an optional formula $S$, called stoup, and an ordered list of formulae $\Gamma$. The succedent consists of a single formula $A$. Then restrict the application of introduction rules to allow only one of the directions of associativity and unitality, the one in the definition of skew monoidal category. For example, left-introduction rules are allowed to act only on the formula in stoup position, not on formulae in $\Gamma$.
 
@@ -146,7 +146,7 @@ In this work we begin the investigation of  semi-substructural logics with \emph
 
 In Section \ref{sec:focusing}, we introduce a sequent calculus of proofs in normal form, i.e. canonical representative of the equivalence relation on derivations $\circeq$. The design of the latter calculus is again inspired by the ideas of Andreoli and it describes a sound and complete root-first proof search strategy for the original sequent calculus. Completeness is achieved by marking sequents with lists of \emph{tags}, a mechanism introduced by Uustalu et al. \cite{UVW:protsn} and inspired by Scherer and R{\'e}my's saturation technique \cite{scherer:simple:2015}, which helps to completely eliminate all undesired non-determinism in proof search and faithfully capture normal forms wrt. the congruence relation on derivations in the original sequent calculus. %In a sense, this is similar to what proof nets are used for.
 
-To showcase the modularity of our normalization strategy, in Section \ref{sec:extensions} we discuss extensions of the logic with other connectives, such as additive units, the structural rule of exchange in the style of Bourke and Lack, and linear implication.
+To showcase the modularity of our normalization strategy, in Section \ref{sec:extensions} we discuss extensions of the logic with other connectives, such as additive units, the structural rule of exchange in the style of Bourke and Lack and linear implication.
 This provides evidence that our normalization technique is potentially scalable to  other richer substructural logics arising as extensions of ours, e.g. full Lambek calculus or intuitionistic linear logic.
 
 The sequent calculi of Sections \ref{sec:sequent-calculus} and \ref{sec:focusing}, as well as the effective normalization procedure, have been fully formalized in the Agda proof assistant. The code is freely available at
@@ -159,12 +159,12 @@ The sequent calculi of Sections \ref{sec:sequent-calculus} and \ref{sec:focusing
 We start by describing a sequent calculus for a skew variant of non-commutative multiplicative intuitionistic linear logic with additive conjunction and disjunction.
 
 Formulae are inductively generated by the grammar $A,B ::= X \ | \ \I \ | \ A \ot B \ | \ A \land B \ | \ A \lor B$, where $X$ comes from a set $\mathsf{At}$ of atomic formulae. 
-We use $\I , \ot , \land$, and $\lor$ to denote multiplicative verum, multiplicative conjunction, additive conjunction and additive disjunction, respectively.
+We use $\I , \ot , \land$ and $\lor$ to denote multiplicative verum, multiplicative conjunction, additive conjunction and additive disjunction, respectively.
 
 A sequent is a triple of the form $S \mid \Gamma \vdash A$.
 The antecedent is split in two parts: an optional formula $S$, called \emph{stoup} \cite{girard:constructive:91}, and an ordered list of formulae $\Gamma$, called \emph{context}.
 The succedent $A$ is a single formula.
-The peculiar design of sequents, involving the presence of the stoup in the antecedent, comes from previous work on deductive systems with skew structure by Uustalu, Veltri, Wan and Zeilberger \cite{uustalu:sequent:2021,uustalu:proof:nodate,uustalu:deductive:nodate,veltri:coherence:2021,UVW:protsn}.
+The peculiar design of sequents, involving the presence of the stoup in the antecedent, comes from our previous work on deductive systems with skew structure in collaboration with Uustalu and Zeilberger \cite{uustalu:sequent:2021,uustalu:proof:nodate,uustalu:deductive:nodate,veltri:coherence:2021,UVW:protsn}.
 The metavariable $S$ always denotes a stoup, i.e., $S$ can be a single formula or empty, in which case we write $S = {-}$. Metavariables $X,Y,Z$ are always names of atomic formulae.
 
 Derivations of a sequent $S \mid \Gamma \vdash A$ are inductively generated by the following rules:
@@ -211,11 +211,11 @@ Derivations of a sequent $S \mid \Gamma \vdash A$ are inductively generated by t
   \end{array}
 \end{equation}
 % The inference rules in (\ref{eq:seqcalc}) are reminiscent of the ones in the sequent calculus for \NMILL\ \cite{abrusci:noncommutative:1990}, but there are some crucial differences.
-The inference rules are similar to the ones in  \cite{abrusci:noncommutative:1990}, but with some essential differences. 
+The inference rules are similar to the ones in non-commutative intuitionistic linear logic \cite{abrusci:noncommutative:1990}, but with some essential differences. 
 \begin{enumerate}
-\item The left logical rules $\unitl$, $\tl$, $\andli$, and $\orl$, when read bottom-up, can only be applied on the formula in the stoup position. 
+\item The left logical rules $\unitl$, $\tl$, $\andli$ and $\orl$, when read bottom-up, can only be applied on the formula in the stoup position. 
 That is, it is generally not possible to remove a unit $\I$, or decompose a tensor $A \ot B$ or a disjunction $A \lor B$, when these formulae are located in the context.
-\item The right tensor rule $\tr$, when read bottom-up, splits the antecedent of the conclusion but the formula in the stoup, whenever this is present, always moves to the first (left) premise.
+\item The right tensor rule $\tr$, when read bottom-up, splits the antecedent of the conclusion but the formula in the stoup, whenever this is present, always moves to the left premise.
 The stoup formula of the conclusion is prohibited to move to the second premise even if $\Gamma$ is empty. 
 \item The presence of the stoup implies a distinction between antecedents of the form $A \mid \Gamma$ and ${-} \mid A, \Gamma$. The structural rule $\pass$ (for `passivation'), when read bottom-up, allows the moving of the leftmost formula in the context to the stoup position whenever the stoup is initially empty.
 % \item The logical connectives of \NMILL\ typically include two ordered implications $\lolli$ and $\illol$, which are two variants of linear implication arising from the removal of the exchange rule from intuitionistic linear logic. In \SkNMILL\ only one of the ordered implications (the left implication $\lolli$) is present. It is currently not clear to us whether the inclusion of the second implication to our logic is a meaningful addition and whether it corresponds to some particular categorical notion.
@@ -223,7 +223,7 @@ The stoup formula of the conclusion is prohibited to move to the second premise 
 These restrictions allow the derivability of sequents $(A \ot B) \ot C \mid ~\vdash A \ot (B\ot C)$ (semi-associativity), $\I \ot A \mid ~ \vdash A$ and $A \mid ~ \vdash A \ot \I$ (semi-unitality), while forbidding the derivability of their inverses, where the formulae in the stoup and in the succedent have been swapped. This is in line with the intended categorical semantics, see Section \ref{sec:categorical}.
 % The restrictions in 1--4 are essential for precisely capturing all the features of skew monoidal closed categories and nothing more, as we discuss in Section \ref{sec:catsem}.
 % Notice also that, similarly to the case of \NMILL, all structural rules of exchange, contraction, and weakening are absent. We give names to derivations and we write $f : S \mid \Gamma \vdash A$ when $f$ is a particular derivation of the sequent $S \mid \Gamma \vdash A$.
-Notice that, similarly to the case of non-commutative intuitionistic linear logic \cite{abrusci:noncommutative:1990}, all structural rules of exchange, contraction, and weakening are absent. We give names to derivations and we write $f : S \mid \Gamma \vdash A$ when $f$ is a particular derivation of the sequent $S \mid \Gamma \vdash A$.
+Notice that, similarly to the case of non-commutative intuitionistic linear logic \cite{abrusci:noncommutative:1990}, all structural rules of exchange, contraction and weakening are absent. We give names to derivations and we write $f : S \mid \Gamma \vdash A$ when $f$ is a particular derivation of the sequent $S \mid \Gamma \vdash A$.
 
 \begin{theorem}
   The sequent calculus enjoys cut admissibility: the following two cut rules are admissible
@@ -488,12 +488,12 @@ satisfying the following equations due to Mac Lane \cite{maclane1963natural}:
 A skew monoidal category with binary coproducts is \emph{(binary) left-distributive} if the canonical morphism typed $(A \ot C) + (B \ot C) \to (A + B) \ot C$ has an inverse $l : (A + B) \ot C \to (A \ot C) + (B \ot C)$. We will be interested in skew monoidal categories with binary products and coproducts, which moreover are left-distributive. We simply call these distributive skew monoidal categories.
 
 A \emph{(strict) skew monoidal functor} $F : \mathbb{C} \rightarrow \mathbb{D}$ between skew monoidal categories $(\mathbb{C} , \I , \ot)$ and $(\mathbb{D} , \I' , \ot')$ is a functor from $\mathbb{C}$ to $\mathbb{D}$ satisfying
-    $F \I = \I'$ and $F (A \ot B) = F A \ot' F B$, also preserving the structural laws $\lambda$, $\rho$ and $\alpha$ on the nose. This means that $F \lambda_A^\mathbb{C} = \lambda_{FA}^\mathbb{D}$, where $\lambda^\mathbb{C}$ and $\lambda^\mathbb{D}$ are left-unitors of $\mathbb{C}$ and $\mathbb{D}$ respectively, and similar equations hold for $\rho$ and $\alpha$. A skew monoidal functor is \emph{distributive} if it also strictly preserves products, coproducts and left-distributivity.
+    $F \I = \I'$ and $F (A \ot B) = F A \ot' F B$, also preserving the structural laws $\lambda$, $\rho$ and $\alpha$ on the nose. This means that $F \lambda_A^\mathbb{C} = \lambda_{FA}^\mathbb{D}$, where $\lambda^\mathbb{C}$ and $\lambda^\mathbb{D}$ are left-unitors of $\mathbb{C}$ and $\mathbb{D}$ respectively, and similar equations hold for $\rho$ and $\alpha$. A skew monoidal functor is \emph{distributive} if it also strictly preserves products, coproducts and (consequently also) left-distributivity.
 
-The formulae, derivations and the equivalence relation $\circeq$ of the sequent calculus determine a \emph{syntactic} distributive skew monoidal category $\FSkMCC(\mathsf{At})$ (an acronym for \textsf{F}ree \textsf{D}istributive \textsf{Sk}ew \textsf{M}onoidal category). Its objects are formulae. The operations $\I$ and $\ot$ are the logical connectives. The set of maps between objects $A$ and $B$ is the set of derivations $A \mid ~ \vdash B$ quotiented by the equivalence relation $\circeq$. The identity map on $A$ is the equivalence class of $\ax_A$, while composition is given by $\mathsf{scut}$. The structural laws $\lambda$, $\rho$, $\alpha$ are all admissible. Products and coproducts are the additive connectives $\land$ and $\lor$. Left-distributivity follows from the logical rules of $\lor$ and $\ot$.
+The formulae, derivations and the equivalence relation $\circeq$ of the sequent calculus determine a \emph{syntactic} distributive skew monoidal category $\FSkMCC(\mathsf{At})$ (an acronym for \textsf{F}ree \textsf{D}istributive \textsf{Sk}ew \textsf{M}onoidal category on the set $\mathsf{At}$). Its objects are formulae. The operations $\I$ and $\ot$ are the logical connectives. The set of maps between objects $A$ and $B$ is the set of derivations $A \mid ~ \vdash B$ quotiented by the equivalence relation $\circeq$. The identity map on $A$ is the equivalence class of $\ax_A$, while composition is given by $\mathsf{scut}$. The structural laws $\lambda$, $\rho$, $\alpha$ are all admissible. Products and coproducts are the additive connectives $\land$ and $\lor$. Left-distributivity follows from the logical rules of $\lor$ and $\ot$.
 
 Distributive skew monoidal categories form models of our sequent calculus.
-Moreover, the sequent calculus as a presentation of a distributive skew monoidal category is the \emph{initial} one among these
+Moreover the sequent calculus, as a presentation of a distributive skew monoidal category, is the \emph{initial} one among these
 models. Equivalently, $\FSkMCC(\mathsf{At})$ is the \emph{free}
 such category on the set $\mathsf{At}$.
 \begin{theorem}\label{thm:models}
@@ -780,7 +780,7 @@ The proof search of a sequent $S \mid \Gamma \vdash_\RI A$ proceeds as follows:
   \item[($\vdash_{\RI}$)] We apply the right invertible rule $\andr$ eagerly to decompose the succedent until its principal connective is not $\land$, then we move to the left invertible phase $\vdash_\LI$ with an application of $\LI 2 \RI$.
   \item[($\vdash_{\LI}$)] We apply left invertible rules until the stoup becomes irreducible, then move to the focusing phase $\vdash_\F$ with an application of $\F 2 \LI$.
   % \item[($\vdash_{\Pass}$)] In this phase, if the stoup is empty, then we can apply $\pass$ to move the head element of the context to stoup then go back to the left invertible phase.  If we do not (or cannot) apply $\pass$, we move to the focusing phase via $\F2 \Pass$.
-  \item[($\vdash_{\F}$)] We apply one of the remaining rules. Since the sequents are not marked by tags at this point, rules $\pass$, $\ax$ , $\unitr$ and $\andli$ can be directly applied when stoups, contexts, and succedents are of the appropriate form.
+  \item[($\vdash_{\F}$)] We apply one of the remaining rules. Since the sequents are not marked by tags at this point, rules $\pass$, $\ax$ , $\unitr$ and $\andli$ can be directly applied when stoups, contexts and succedents are of the appropriate form.
   If we decide to apply a right non-invertible rule, we need to come up with a valid list of tags $l$ and subsequently move to the tagged right invertible phase ($\vdash^{l}_{\RI}$) described below. Notice that only the first premise of $\tr$ is tagged, the second premise is not, i.e. its proof search continues in phase $\vdash_{\RI}$.
 \end{itemize}
 The proof search of a sequent $T \mid \Gamma \vdash^{l}_\RI A$ proceeds as follows (notice that at this point in proof search the stoup $T$ is necessarily irreducible):
